# protobuf-demo

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
examples/: hex_dump.h  person.cc  pulsar_message.cc  schema.cc
proto/: ExternalTest.proto  Test.proto  person-lite.proto  person.proto  pulsar_external_message.proto  pulsar_message.proto
scripts/: build-osx.sh  configure-osx.sh  format.sh
tests/: main.cc  split.h
